Name:		reactive-banana-gtk
Version:	0.0.2
License:	MIT
Author:		Emon Tsukimiya
Maintainer: Christian Conkle <christian at conkle.org>
Category:	FRP, GUI
Synopsis:	reactive-banana binding to GTK+
Cabal-Version:	>= 1.6
Build-Type:	Simple

Source-repository head
    type:               git
    location:           git://github.com/conklech/reactive-banana-gtk.git
    
Library
    Extensions:         Rank2Types, ScopedTypeVariables, ExistentialQuantification
    Build-Depends:	    base, glib, gtk >= 0.12.0 && < 0.13, reactive-banana >= 0.7 && < 0.8
    Exposed-Modules:	Reactive.Banana.Gtk
