Name:           reactive-banana-gtk
Version:        0.0.4
License:        MIT
Author:         Emon Tsukimiya
                Christian Conkle <christian at conkle.org>
Maintainer:     Pavel Kogan <pkogan@gmail.com>
Category:       FRP, GUI
Synopsis:       reactive-banana binding to GTK+
Stability:      provisional
Cabal-Version:  >= 1.8
Build-Type:     Simple

Source-repository head
  type:      git
  location:  git://github.com/pavelkogan/reactive-banana-gtk.git

Library
  Extensions:       Rank2Types, ExistentialQuantification
  Build-Depends:    base,
                    mtl >= 2 && < 3,
                    containers,
                    errors,
                    reactive-banana >= 0.8 && < 0.9,
                    glib,
                    gtk >= 0.12.0 && < 0.14
  GHC-Options:      -Wall
  Exposed-Modules:  Reactive.Banana.Gtk,
                    Reactive.Banana.Gtk.Collections
  Other-Modules:    Reactive.Banana.Gtk.MapStore
